# CppCodeProviderv2

./: .gitignore  CMakeLists.txt  README.md
CppCodeProvider/: CMakeLists.txt  CppCodeProvider.cpp  CppCodeProvider.sln  CppCodeProvider.vcxproj  forward_declarations.h
CppCodeProvider/features/: declarations.h  expressions.h  forward_declarations.h  functions.h  statements.h  types.h
CppCodeProvider/features/declarations/: common.h  declaration_common.cpp  declarator.cpp  declarator.h  declarator_specifer.cpp  declarator_specific.cpp  declarator_specific.h  declarator_specifier.cpp  declarator_specifier.h  variable_declaration.cpp  variable_declaration.h  variable_declaration_list.cpp  variable_declaration_list.h
CppCodeProvider/features/expressions/: binary_expressions.cpp  binary_expressions.h  common.cpp  common.h  expression_common.cpp  expression_type.cpp  expression_types.h  fold_expression.cpp  fold_expression.h  function_invoke_expression.cpp  function_invoke_expression.h  lambda_expression.cpp  lambda_expression.h  primitive_expression.h  ternary_expression.cpp  ternary_expression.h  unary_expressions.cpp  unary_expressions.h
CppCodeProvider/features/functions/: callable.cpp  callable.h  function.cpp  function.h  member_function.cpp  member_function.h
CppCodeProvider/features/internals/: write_backlog_entry.h
CppCodeProvider/features/namespaces/: namespace_scope.cpp  namespace_scope.h  namespace_scope_entity.cpp  namespace_scope_entity.h
CppCodeProvider/features/statements/: block_statement.cpp  block_statement.h  common.h  expression_statement.cpp  expression_statement.h  for_loop.cpp  for_loop.h  if_statement.cpp  if_statement.h  if_statment.cpp  jump_statements.cpp  jump_statements.h  ranged_for_loop.cpp  ranged_for_loop.h  statement_common.cpp  switch_statement.cpp  switch_statement.h  try_statement.cpp  try_statement.h  while_loop.cpp  while_loop.h
CppCodeProvider/features/types/: access_levels.h  base_type.cpp  base_type.h  common.h  custom_type.cpp  custom_type.h  enumeration.cpp  enumeration.h  nested_type.cpp  nested_type.h  primitive_type.cpp  primitive_type.h  template_parameter.cpp  template_parameter.h  template_parametera.cpp  template_parameters.cpp  template_parameters.h  types_common.cpp  union_type.cpp  union_type.h  user_defined_type.cpp  user_defined_type.h
CppCodeProvider/formatters/: formatter_settings.h
CppCodeProvider/tests/: tests.cpp
CppCodeProvider/utils/: copyable_ptr.h  dirty_macros.h  write_helpers.cpp  write_helpers.h
src/: CMakeLists.txt  CppCodeProvider.cpp  exceptions.h
src/features/: declarations.h  expressions.h  forward_declarations.h  functions.h  namespaces.h  preprocessor.h
src/features/declarations/: common.h  declaration_common.cpp  declarator.cpp  declarator.h  declarator_specifier.cpp  variable_declaration.cpp  variable_declaration.h  variable_declaration_list.cpp  variable_declaration_list.h
src/features/expressions/: binary_expressions.cpp  binary_expressions.h  callable_reference_expression.cpp  callable_reference_expression.h  expression_common.cpp  fold_expression.h  invoke_expression.cpp  invoke_expression.h  lambda_expression.cpp  lambda_expression.h  primitive_expression.cpp  ternary_expression.cpp  ternary_expression.h  unary_expressions.cpp
src/features/functions/: callable.cpp  callable.h  constructor.cpp  (+5 more)
src/formatters/: formatter_settings.cpp
src/utils/: dirty_macros.h  write_helpers.cpp  write_helpers.h
tests/: CMakeLists.txt
tests/utils/: write_helpers_tests.cpp
(+56 files in other folders)
